(main-style.css): Fixed page sections top offset from behind main-nav bar

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -90,8 +90,8 @@
 
 
 /* top margin offsets from behind fixed header */
-main {
-    margin-top: 5rem;
+main.container-fluid {
+    padding-top: 7rem;
 }
 
 
